app/assets/stylesheets/dashboard.css.scss
.user_badge {
	margin-left: 0;
	margin-right: 20px;
	width: 220px;
	.avatar_img {
		width:80px;
		height:80px;
		background-color:#fff
	}
	.avatar_name {
		line-height:80px;
		padding-left:20px;
		overflow: hidden;
		width: 120px;
	}
	ul {
		margin-bottom: 0;
	}
	.caption {
		text-align: center;
	}
	-webkit-border-radius: 0;
	-moz-border-radius: 0;
	border-radius: 0;
	border-right: 1px solid #ddd !important;
}

.dashboard {
	
	.userinfo {
		position: relative;
		border-bottom: 1px solid #ccc;
		padding-bottom: 20px;
		margin-bottom: 20px;
		.span3 {
			margin-left: 0;
		}
	}
	.wishCountBar{
		background-color: #eee;
		line-height: 45px;
		margin-bottom: 20px;
		border: 0;
		border-left: 4px solid #65B8FD;
		ul.nav > li{
			padding: 0 10px;
			line-height: 45px;
			height: 45px;
		}
	}
	ul.myActions {
		margin-top: 40px;
		margin-bottom: 0;
		z-index: 101;
		> li {
			width: 120px;
			height: 80px;
			background-color: #fff;
			margin-right: 8px;
			line-height: 80px;
			text-align: center;
			border-bottom: 1px solid #ccc;
			box-shadow: 2px 2px 5px #ccc;
		}
		>li:hover {
			border-bottom: 0;
			box-shadow: -2px -2px 5px #ccc;
		}
	}
	div.myActions-panel {
		position: absolute;
		z-index:100;
		> div {
			background-color: #fff;
			box-shadow: -2px 2px 5px #ccc;
			padding: 20px 10px;
			width: 520px;
		}
		div.inviteuser, div.wishlist{
			h4 {
				padding-bottom: 10px;
			}
		}
		div.wishlist {
			div.copy-wishlist > div {
				padding-bottom: 10px;
			}
			div.orcls {
				color: gray;
				width: 520px;
				text-align: center;
				font-size: 18px;
				padding-bottom: 10px;
			}
		}
	}
	.navbar .nav > li > a {
		margin: 0;
		line-height: 45px;
		height: 45px;
		padding: 0;
		color: black;
		text-shadow: 0 0 0;
	}
	.item_block {
		margin-right: 30px;
		width: 472px;
		box-shadow: 2px 2px 2px #ccc;
		.item_right {
			padding-top: 10px;
		}
		.user_comment {
			height: 135px;
			overflow: hidden;
		}
		.the-icons {
			float: right;
			margin-bottom: 10px;
		}
	}
	.pagination {
		text-align: center;
	}
}

